feat: add swagger documentation to auth endpoint
